added some text to the analysis

--- a/analysis/scores_analysis.ipynb
+++ b/analysis/scores_analysis.ipynb
@@ -292,6 +292,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The aim here is to investigate if we loose precision by clipping images. In order to do that, we visually inspect the differences between the images with labels bigger than the cut point, and images slightly below the cut point"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### First lets look at UCLA"
    ]
   },
