--- a/analysis/UCLA_model_without_visual_in_combined_dataset.ipynb
+++ b/analysis/UCLA_model_without_visual_in_combined_dataset.ipynb
@@ -4,46 +4,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UCLA Model Combined Datasets\n",
-    "\n",
-    "This notebook is aimed at applying the exact same model as UCLA in the newly combined dataset (ITU + UCLA)"
+    "# UCLA model without visual attributes applied to the ITU + UCLA set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is aimed at running the UCLA original network without visual attributes to the combination of the ITU + UCLA datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lucas/Documents/ITU/Thesis_2018/venv/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from protestDB import cursor\n",
+    "import pandas as pd\n",
+    "from lib import analysis_utils as au"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading up the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": [
-    "from protestDB import cursor\n",
-    "import time\n",
-    "from protestDB import models\n",
-    "from lib import analysis_utils as au\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "from matplotlib import pyplot as plt\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
-    "import scipy\n",
-    "from keras import backend as Kbackend\n",
-    "from keras import callbacks as Kcallbacks\n",
-    "from keras import optimizers as Koptimizers\n",
-    "from keras import losses as Klosses\n",
-    "from keras import models as Kmodels\n",
-    "from keras import backend as Kbackend\n",
-    "from keras import applications as Kapplications\n",
-    "from keras import layers as Klayers\n",
-    "import h5py\n",
-    "import itertools\n",
-    "from lib import transforms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -63,6 +67,13 @@
     "print (len(imgs_UCLA), \" UCLA images, both protest and non protest\")\n",
     "print (len(imgs_ITU), \" ITU images, only protest related\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
