--- a/analysis/post_scope_experiments/UCLA_model_ADD_FC_DROPOUT.ipynb
+++ b/analysis/post_scope_experiments/UCLA_model_ADD_FC_DROPOUT.ipynb
@@ -2023,6 +2023,9 @@
     "\n",
     "# Preds\n",
     "\n",
+    "#load the weights from the best model\n",
+    "model.load_weights(model_checkout_path)\n",
+    "\n",
     "preds = model.predict_generator(test_generator, verbose = 1)\n",
     "preds_protest = preds[0][:len(test_df)] # avoid getting more than the needed\n",
     "preds_violence = preds[1][:len(test_df)] \n",
@@ -2041,7 +2044,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
