fixed batch size of adam to production size

--- a/analysis/post_scope_experiments/UCLA_model_adam_optimizer.ipynb
+++ b/analysis/post_scope_experiments/UCLA_model_adam_optimizer.ipynb
@@ -16,7 +16,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1689,7 +1691,7 @@
    },
    "outputs": [],
    "source": [
-    "batch_size = 8"
+    "batch_size = 32"
    ]
   },
   {
@@ -2033,7 +2035,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
