--- a/analysis/post_scope_experiments/UCLA_model_UCLA_dataset_without_visual_attributes.ipynb
+++ b/analysis/post_scope_experiments/UCLA_model_UCLA_dataset_without_visual_attributes.ipynb
@@ -14,6 +14,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
+    "sys.path.append(\"../../venv/lib/python3.6/site-packages/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
