--- a/analysis/post_scope_experiments/xception_base.ipynb
+++ b/analysis/post_scope_experiments/xception_base.ipynb
@@ -1939,7 +1939,7 @@
     "\n",
     "model = Kmodels.Model(inputs= img_input, outputs=[protest_out, violence_out])\n",
     "\n",
-    "optimizer = Koptimizers.SGD(lr=lr * 10, momentum=momentum, nesterov=False)\n",
+    "optimizer = Koptimizers.SGD(lr=lr, momentum=momentum, nesterov=False)\n",
     "model.compile(optimizer=optimizer,\n",
     "          loss={'protest_out': Klosses.binary_crossentropy,\n",
     "                'violence_out': au.buildMaskedLoss(Klosses.mean_squared_error, mask_value)},\n",
