fixed bug in reduced augmentation experiment

--- a/analysis/post_scope_experiments/UCLA_model_reduced_augmentation.ipynb
+++ b/analysis/post_scope_experiments/UCLA_model_reduced_augmentation.ipynb
@@ -16,7 +16,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1881,7 +1883,8 @@
     "    batch_size, \n",
     "    targets = ['protest', 'violence'],\n",
     "    transforms = [\n",
-    "        transforms.randomResizedCrop,\n",
+    "#         transforms.randomResizedCrop,\n",
+    "        lambda img: transforms.randomResizedCrop(img, min_percent=70),\n",
     "        transforms.randomRotation,\n",
     "        transforms.randomHorizontalFlip,\n",
     "        transforms.colorJitter,\n",
@@ -1903,15 +1906,15 @@
     ")\n",
     "\n",
     "test_generator = au.ResizeSequence(\n",
-    "test_df,\n",
-    "batch_size, \n",
-    "targets = ['protest', 'violence'],\n",
-    "transforms = [\n",
-    "    transforms.resize,\n",
-    "    transforms.centerCrop,\n",
-    "    transforms.normalizeMinMax,\n",
-    "    transforms.normalizeStandardScore\n",
-    "]\n",
+    "    test_df,\n",
+    "    batch_size, \n",
+    "    targets = ['protest', 'violence'],\n",
+    "    transforms = [\n",
+    "        transforms.resize,\n",
+    "        transforms.centerCrop,\n",
+    "        transforms.normalizeMinMax,\n",
+    "        transforms.normalizeStandardScore\n",
+    "    ]\n",
     ")\n",
     "\n",
     "\n",
