--- a/analysis/post_scope_experiments/UCLA_model_w_visual_attributes_no_protest.ipynb
+++ b/analysis/post_scope_experiments/UCLA_model_w_visual_attributes_no_protest.ipynb
@@ -2652,8 +2652,6 @@
     }
    ],
    "source": [
-    "batch_size = 2\n",
-    "\n",
     "# df = df.rename(columns={\"label\": \"violence\"})\n",
     "\n",
     "train_idx = df['ucla-train']\n",
@@ -4314,11 +4312,7 @@
     "\n",
     "model = Kmodels.Model(inputs= img_input, outputs=[violence_out, visual_out])\n",
     "\n",
-    "# optimizer = Koptimizers.SGD(lr=lr, momentum=momentum, nesterov=False)\n",
-    "# Using the default parameters set by Keras, which has them because they're as presented\n",
-    "# in the paper.\n",
-    "optimizer = Koptimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999, epsilon=None, decay=0.0, amsgrad=False)\n",
-    "\n",
+    "optimizer = Koptimizers.SGD(lr=lr, momentum=momentum, nesterov=False)\n",
     "model.compile(optimizer=optimizer,\n",
     "    loss={\n",
     "        'visual_out': au.buildMaskedLoss(Klosses.binary_crossentropy, mask_value), \n",
@@ -4435,7 +4429,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -4457,7 +4453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
