--- a/analysis/post_scope_experiments/UCLA_model_two_round_train.ipynb
+++ b/analysis/post_scope_experiments/UCLA_model_two_round_train.ipynb
@@ -2300,13 +2300,13 @@
    "outputs": [],
    "source": [
     "# COMMENT THIS OUT FOR RUN WITH THE WHOLE DATA SET\n",
-    "size_sample = 40\n",
-    "validation_df = validation_df[:size_sample]\n",
-    "test_df = test_df[:size_sample]\n",
-    "train_df = train_df[:size_sample]\n",
-    "batch_size = 2\n",
-    "epochs = 1\n",
-    "patience = 0"
+    "# size_sample = 40\n",
+    "# validation_df = validation_df[:size_sample]\n",
+    "# test_df = test_df[:size_sample]\n",
+    "# train_df = train_df[:size_sample]\n",
+    "# batch_size = 2\n",
+    "# epochs = 1\n",
+    "# patience = 0"
    ]
   },
   {
