add evaluation notebook from rerun of original cross validation

--- a/analysis/post_scope_experiments/UCLA_results_validation_cross_validation_evaluation.ipynb
+++ b/analysis/post_scope_experiments/UCLA_results_validation_cross_validation_evaluation.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -86,8 +88,8 @@
    ],
    "source": [
     "pred_dir = \"models_preds\"\n",
-    "# base_name = \"UCLA_results_validation_cross_validation_datalen-40720_epochs-100_init_lr-0.01_momentum-0.9_batch_size-32_n_folds-5_n_folds_seed-300_split\"\n",
-    "base_name = \"test_datalen-40720_epochs-1_init_lr-0.01_momentum-0.9_batch_size-32_n_folds-5_n_folds_seed-300_split\"\n",
+    "base_name = \"UCLA_results_validation_cross_validation_datalen-40720_epochs-100_init_lr-0.01_momentum-0.9_batch_size-32_n_folds-5_n_folds_seed-300_split\"\n",
+    "# base_name = \"test_datalen-40720_epochs-1_init_lr-0.01_momentum-0.9_batch_size-32_n_folds-5_n_folds_seed-300_split\"\n",
     "folds = []\n",
     "\n",
     "for filename in os.listdir(pred_dir):\n",
@@ -695,7 +697,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
