--- a/analysis/post_scope_experiments/UCLA_results_validation_cross_validation_evaluation.ipynb
+++ b/analysis/post_scope_experiments/UCLA_results_validation_cross_validation_evaluation.ipynb
@@ -104,10 +104,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
-    "editable": true,
-    "scrolled": true
+    "editable": true
    },
    "outputs": [
     {
