setup to visualize the 16 most activating filters out of all filters in the last layer

--- a/analysis/post_scope_experiments/Visualize Conv Layers.ipynb
+++ b/analysis/post_scope_experiments/Visualize Conv Layers.ipynb
@@ -194,8 +194,9 @@
    "outputs": [],
    "source": [
     "# The name of the layer whose filters to visualize:\n",
-    "#layer_name = 'res2a_branch2a' # First layer\n",
-    "layer_name = 'res3c_branch2b' # 20th layer"
+    "# layer_name = 'res2a_branch2a' # First layer\n",
+    "# layer_name = 'res3c_branch2b' # 20th layer\n",
+    "layer_name = 'res5c_branch2c' # Last layer"
    ]
   },
   {
@@ -737,13 +738,7 @@
       "Current loss value: -0.19914147  and  -0.19914147                                \n",
       "Filter 73 processed in 10s\n",
       "Current loss value: 1.1904693  and  1.1904693                                    \n",
-      "Filter 74 processed in 17s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Filter 74 processed in 17s\n",
       "Current loss value: -0.024142668  and  -0.024142668                              \n",
       "Filter 75 processed in 10s\n",
       "Current loss value: 0.082598954  and  0.082598954                                \n",
@@ -909,7 +904,8 @@
     "\n",
     "kept_filters1 = []\n",
     "kept_filters2 = []\n",
-    "num_filters = min(200, layer_dict1[layer_name].get_config()['filters'])\n",
+    "#num_filters = min(200, layer_dict1[layer_name].get_config()['filters'])\n",
+    "num_filters = layer_dict1[layer_name].get_config()['filters']\n",
     "\n",
     "print(\"_\" * 80)\n",
     "print(\"Maximizing activation for %s filters\" % num_filters)\n",
